clean-up and breakdown of async magic

--- a/jupyter_tornado/notebooks/Under the Covers - Jupyter Notebook & Tornado.ipynb
+++ b/jupyter_tornado/notebooks/Under the Covers - Jupyter Notebook & Tornado.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {
       "image/png": {
        "width": 600
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -153,13 +153,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -168,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How did this work?"
+    "# How did this \"magic\" magic work?"
    ]
   },
   {
@@ -373,20 +366,12 @@
    "metadata": {},
    "source": [
     "## How IPython and Jupyer Notebooks Work\n",
-    "Source: https://jupyter.readthedocs.io/en/latest/architecture/how_jupyter_ipython_work.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> All the other interfaces —- the Notebook, the Qt console, ipython console in the terminal, and third party interfaces —- use the IPython Kernel. The IPython Kernel is a separate process which is responsible for running user code, and things like computing possible completions. Frontends, like the notebook or the Qt console, communicate with the IPython Kernel using JSON messages sent over ZeroMQ sockets; the protocol used between the frontends and the IPython Kernel is described in Messaging in Jupyter.\n",
     "\n",
-    "https://jupyter.readthedocs.io/en/latest/architecture/how_jupyter_ipython_work.html\n",
+    "> ...the Notebook, the Qt console, ipython console in the terminal, and third party interfaces —- use the IPython Kernel. The IPython Kernel is a separate process which is responsible for running user code, and things like computing possible completions.    \n",
+    "> --- [How IPython and Jupyter Notebook work](https://jupyter.readthedocs.io/en/latest/architecture/how_jupyter_ipython_work.html)\n",
     "\n",
-    "> IPython has abstracted and extended the notion of a traditional Read-Evaluate-Print Loop (REPL) environment by decoupling the evaluation into its own process. We call this process a kernel: it receives execution instructions from clients and communicates the results back to them.\n",
-    "\n",
-    "https://ipython.readthedocs.io/en/stable/overview.html#ipythonzmq\n"
+    "> IPython has abstracted and extended the notion of a traditional Read-Evaluate-Print Loop (REPL) environment by decoupling the evaluation into its own process. We call this process a kernel: it receives execution instructions from clients and communicates the results back to them.     \n",
+    "> --- [Decoupled two-process model](https://ipython.readthedocs.io/en/stable/overview.html#ipythonzmq)\n"
    ]
   },
   {
@@ -398,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +393,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +421,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,12 +434,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Running a notebook server"
+    "## Running a notebook server\n",
+    "\n",
+    "> The Jupyter notebook web application is based on a server-client structure. The notebook server uses a two-process kernel architecture based on ZeroMQ, as well as Tornado for serving HTTP requests.      \n",
+    "> -- [Running a notebook server](https://jupyter-notebook.readthedocs.io/en/stable/public_server.html)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +452,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,33 +465,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> The Jupyter notebook web application is based on a server-client structure. The notebook server uses a two-process kernel architecture based on ZeroMQ, as well as Tornado for serving HTTP requests.\n",
-    "\n",
-    "https://jupyter-notebook.readthedocs.io/en/stable/public_server.html\n",
-    "\n",
-    "\n",
-    "* http://zeromq.org/\n",
-    "* http://www.tornadoweb.org/en/stable/\n",
-    "\n",
-    "> Tornado is a scalable, non-blocking web server and web application framework written in Python. It was developed for use by FriendFeed; the company was acquired by Facebook in 2009 and Tornado was open-sourced soon after. [Wikipedia](https://en.wikipedia.org/wiki/Tornado_(web_server))\n",
+    "> Tornado is a scalable, non-blocking web server and web application framework written in Python. It was developed for use by FriendFeed; the company was acquired by Facebook in 2009 and Tornado was open-sourced soon after.     \n",
+    "> -- [Wikipedia](https://en.wikipedia.org/wiki/Tornado_(web_server))\n",
     "\n",
     "\n",
     "### Asynchronous networking\n",
     "\n",
-    "> An I/O event loop for non-blocking sockets. On Python 3, IOLoop is a wrapper around the asyncio event loop. Typical applications will use a single IOLoop object, accessed via IOLoop.current class method. The IOLoop.start method (or equivalently, asyncio.AbstractEventLoop.run_forever) should usually be called at the end of the main() function. Atypical applications may use more than one IOLoop, such as one IOLoop per thread, or per unittest case. In addition to I/O events, the IOLoop can also schedule time-based events. IOLoop.add_timeout is a non-blocking alternative to time.sleep.\n",
+    "> An I/O event loop for non-blocking sockets. On Python 3, IOLoop is a wrapper around the asyncio event loop.\n",
+    "> -- http://www.tornadoweb.org/en/stable/ioloop.html\n",
     "\n",
-    "http://www.tornadoweb.org/en/stable/ioloop.html\n",
-    "\n",
-    "\n",
-    "> In computer science, asynchronous I/O (also non-sequential I/O) is a form of input/output processing that permits other processing to continue before the transmission has finished. [Wikipedia](https://en.wikipedia.org/wiki/Asynchronous_I/O)"
+    "> The event loop is the core of every asyncio application. Event loops run asynchronous tasks and callbacks, perform network IO operations, and run subprocesses.\n",
+    "> -- https://docs.python.org/3/library/asyncio-eventloop.html"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**In short, the we can use Tornado to submit tasks to the IPython kernel.  However, we don't have to await a response.  Instead, we get a _promise_ (or `future`) of a result that is yet to be calculated.**"
+   ]
   },
   {
    "cell_type": "code",
@@ -521,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,6 +534,47 @@
     "    future = async_loop.run_in_executor(executor, partial(ipy.run_cell, raw_cell=cell))\n",
     "    #  Placeholder to add functionalilty like alerts after cell completes.\n",
     "    future.add_done_callback(cell_done_callback)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Breaking it down:\n",
+    "\n",
+    "1. Create a new jupyter magic called \"non_blocking_cell\".  The input being the contents of the cell as a string which we will later excute on the remote kernel.\n",
+    "```python\n",
+    "@register_cell_magic\n",
+    "def non_blocking_cell(line, cell):\n",
+    "```\n",
+    "\n",
+    "2.  Access the Notebook server's Tornado ioloop.  Calling this directly will enable us to take advantage of the asynchronous calls to avoid waiting for computation to complete.\n",
+    "```python\n",
+    "# If an `IOLoop` is currently running or has been marked as\n",
+    "#  current by `make_current`, returns that instance.\n",
+    "# \"One event loop to rule them all.\"\n",
+    "async_loop = ioloop.IOLoop.instance()\n",
+    "```\n",
+    "\n",
+    "3. Grab this `ZMQInteractiveShell`; providing access to the IPython cell running functions.\n",
+    "```python\n",
+    "# Get the global InteractiveShell instance.\n",
+    "ipy = get_ipython()\n",
+    "```\n",
+    "\n",
+    "4. Run the code.  Get a `future` placeholder object back that will contain the results of the code once its complete.\n",
+    "```python\n",
+    "# Runs a function in a `concurrent.futures.Executor`. Since `executor` is `None`, \n",
+    "# the IO loop's default executor will be used.\n",
+    "executor = None\n",
+    "future = async_loop.run_in_executor(executor, partial(ipy.run_cell, raw_cell=cell))\n",
+    "```\n",
+    "\n",
+    "5.  Optionally, do something (call the function) once the results are ready.  Otherwise, executed code will just be in your kernel's memory and you can access it normally.\n",
+    "```python\n",
+    "#  Add a callback to be run when the future becomes done.\n",
+    "future.add_done_callback(cell_done_callback)\n",
+    "```"
    ]
   },
   {
